# arrow_struct

./: Cargo.toml  README.md
arrow_struct/: Cargo.toml
arrow_struct/src/: lib.rs
arrow_struct_derive/: Cargo.toml
arrow_struct_derive/src/: lib.rs
benchmarks/: Cargo.toml
benchmarks/benches/: benchmarks.rs
examples/: Cargo.toml
examples/src/: lib.rs
