[workspace]
members = [
    "arrow_struct_derive",
    "arrow_struct",
    "examples",
]


[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
arrow_struct = {path = "arrow_struct" }
arrow_struct_derive = { path = "arrow_struct_derive" }
arrow = "52.2.0"
bytes = "1.6.0"

convert_case = "0.6.0"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.76"